# mobile-robots-and-path-planning

./: README.md
ackermann_drive/: CMakeLists.txt  package.xml
ackermann_drive/launch/: ackermann_vehicle_hokuyo_imu_description.launch  ackermann_vehicle_hokuyo_imu_gazebo.launch
ackermann_drive/scripts/: cmd_to_ackermann_drive.py  joy_to_cmd.py
ackermann_drive/urdf/: ack_car.xacro
ackermann_drive/world/: simple_world.world
simple_drone/: CMakeLists.txt  package.xml
skidsteer_drive/: CMakeLists.txt  package.xml
skidsteer_drive/launch/: bot.launch
