<?xml version="1.0"?>
<package format="2">
  <name>ackermann_drive</name>
  <version>0.0.0</version>
  <description>The demo of ackermann drive</description>

  <maintainer email="macavitycode@gmail.com">Shashank Rajiv Moghe</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>message_runtime</depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>

</package>
