<?xml version="1.0"?>
<package format="2">
  <name>simple_drone</name>
  <version>0.0.0</version>
  <description>The simple_drone package</description>
  <maintainer email="macavitycode@gmail.com">Shashank Rajiv Moghe</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <depend>gazebo_msgs</depend>
  
  <export>
  </export>
</package>
