<?xml version="1.0"?>
<package format="2">
  <name>skidsteer_drive</name>
  <version>0.0.0</version>
  <description>Some description</description>

  <maintainer email="macavitycode@gmail.com">Shashank Rajiv Moghe</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
</package>
